Added likePhoto and unlikePhoto in the backed Changed return values of these endpoints in the API
